// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/processor.js values should support exporting imported variables 1`] = `
"/* values.css */

/* value-import.css */
.red {
    color: red;
}

.green {
    color: green;
}

/* value-export.css */
.red {
    color: red;
}

.green {
    color: green;
}
"
`;

exports[`/processor.js values should support importing variables from a file 1`] = `
"/* values.css */
/* value-import.css */
.red {
    color: red;
}

.green {
    color: green;
}
"
`;

exports[`/processor.js values should support local values in value composition 1`] = `
Object {
  "fooga": Array [
    "fooga",
  ],
  "local": "'./local.css'",
  "o": "red",
  "one": "red",
}
`;

exports[`/processor.js values should support simple values 1`] = `
"/* values.css */
.a {
    color: red;
    font-family: Segoe UI
    sans-serif;
}"
`;

exports[`/processor.js values should support value composition 1`] = `
"/* values.css */
/* value-composition.css */
.red {
    color: red;
    background: blue;
}
"
`;

exports[`/processor.js values should support value namespaces 1`] = `
"/* values.css */
/* value-namespace.css */
.red {
    color: red;
}

.blue {
    color: blue;
}

.other {
    color: #000;
}
"
`;

exports[`/processor.js values should support value replacement in :external(...) 1`] = `
"/* folder/folder.css */
.folder { margin: 2px; }
/* simple.css */
.fooga {
    color: red;
}
/* local.css */
.booga { background: green; }
/* externals.css */
.a .fooga {
    color: green;
}
.b:hover .booga {
    background: blue;
}
.fooga .booga {
    color: red;
}
"
`;
